--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.3.0",
     "react": "^17.0.2",
+    "react-calendar": "^4.3.0",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.4",
