--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.6.4",
     "axios": "^0.26.1",
     "babel-loader": "^9.1.2",
     "chart.js": "^3.7.1",
